@@ -24,15 +24,6 @@
 # Setup error handling using default settings (defined in includes/error_handlers.sh)
 error_trap_setup
 
-mvn ${MAVEN_ARGS} --version
-
-# Temporary workaround until job stages will share maven repository
-mvn ${MAVEN_ARGS} -f ${WS_DIR}/pom.xml \
-    install -e \
-    -Dmaven.test.skip=true \
-    -DskipTests \
-    -Ppipeline
-
 # Run native image tests
 cd ${WS_DIR}/tests/integration/native-image
 
@@ -53,10 +44,10 @@ java -Dexit.on.started=! -jar target/helidon-tests-native-image-se-1.jar
 #
 cd ${WS_DIR}/tests/integration/native-image/mp-1
 # Classpath
-java -jar target/helidon-tests-native-image-mp-1.jar
+java --enable-preview -jar target/helidon-tests-native-image-mp-1.jar
 
 # Module Path
-java --module-path target/helidon-tests-native-image-mp-1.jar:target/libs \
+java --enable-preview --module-path target/helidon-tests-native-image-mp-1.jar:target/libs \
   --module helidon.tests.nimage.mp/io.helidon.tests.integration.nativeimage.mp1.Mp1Main
 
 #
@@ -64,10 +55,10 @@ java --module-path target/helidon-tests-native-image-mp-1.jar:target/libs \
 #
 cd ${WS_DIR}/tests/integration/native-image/mp-3
 # Classpath
-java -Dexit.on.started=! -jar target/helidon-tests-native-image-mp-3.jar
+java --enable-preview -Dexit.on.started=! -jar target/helidon-tests-native-image-mp-3.jar
 
 # Module Path
-java -Dexit.on.started=! \
+java --enable-preview -Dexit.on.started=! \
   --module-path target/helidon-tests-native-image-mp-3.jar:target/libs \
   --add-modules helidon.tests.nimage.quickstartmp \
   --module io.helidon.microprofile.cdi/io.helidon.microprofile.cdi.Main
